Added more logic. Needs check for doubles. Added basic html.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 	<title>Wordle Solver</title>
 </head>
 <body>
+	<h1>Wordle Solver</h1>
+	<div class="letters-container">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+	</div>
+	<div class="letters-container">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+		<input type="text">
+	</div>
+	<input type="text">
+	<button>Search</button>
 	<script src="scripts.js"></script>
 </body>
 </html>
