--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1>Wordle Solver</h1>
+	<h2>Correct letters</h2>
 	<div class="letters-container" id="correct-letters">
 		<input type="text">
 		<input type="text">
@@ -15,6 +16,7 @@
 		<input type="text">
 		<input type="text">
 	</div>
+	<h2>Misplaced letters</h2>
 	<div class="letters-container" id="misplaced-letters">
 		<input type="text">
 		<input type="text">
@@ -22,8 +24,10 @@
 		<input type="text">
 		<input type="text">
 	</div>
+	<h2>Excluded letters</h2>
 	<input type="text" id="excluded-letters">
-	<button onclick="getPossibleWords()">Search</button>
+	<h2>Possible words: <span id="amount">14855</span></h2>
+	<div id="possible-words"></div>
 	<script src="script.js"></script>
 </body>
 </html>
