Added update log

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
 	<input type="text" id="excluded-letters">
 	<h2>Possible words: <span id="amount">14855</span></h2>
 	<div id="possible-words"></div>
+	<div id="log-toggle">i</div>
+	<div id="update-log" class="closed">
+		<div id="log-header">
+			Update log
+		</div>
+		<div id="log-content">
+			<p>
+				<span class="date">19.12.2025</span> Fixed word list bug. It now empties between each calculation.
+			</p>
+			<p>
+				<span class="date">20.12.2025</span> Improved efficiency. We can now effortlessly show all words in word list.
+			</p>
+			<p>
+				<span class="date">21.12.2025</span> Added update log. Just for fun.
+			</p>
+		</div>
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
