Added keyboard navigation

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
 			<p>
 				<span class="date">21.12.2025</span> Added update log. Just for fun.
 			</p>
+			<p>
+				<span class="date">23.12.2025</span> Added keyboard navigation for your convenience.
+			</p>
 		</div>
 	</div>
 	<script src="script.js"></script>
+	<script src="keyboard_navigation.js"></script>
 </body>
 </html>
